# graphics-sandbox

./: .gitignore  README.md
.claude/: settings.json
.claude/generate-minecraft-block-texture/: SKILL.md
.claude/make-shader/: SKILL.md
.claude/rules/: cmake.md  scripts.md
doc/: memo.md
scripts/: generate_grass_texture.py  generate_normal_map.py  generate_sand_texture.py
shaders/: README.md
shaders/cube/: CMakeLists.txt  main.cpp
shaders/cube/shaders/: fragment.glsl  vertex.glsl
shaders/glass_sphere/: CMakeLists.txt  README.md  main.cpp
shaders/glass_sphere/shaders/: fragment.glsl  vertex.glsl
shaders/sand_cube/: CMakeLists.txt  main.cpp
shaders/sand_cube/shaders/: fragment.glsl  vertex.glsl
shaders/vulkan_rt/: CMakeLists.txt  main.cpp
shaders/vulkan_rt/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  shadow.rmiss
